--- a/frontend/src/styles/aside.css
+++ b/frontend/src/styles/aside.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .aside {
-    @apply w-64 text-white min-h-screen p-6 border-r border-[#3E4042];
+    @apply fixed left-0 w-80 text-white max-h-screen overflow-y-auto p-6 border-r border-[#3E4042] bg-[#14181a];
 }
 
 .aside-links {
@@ -15,3 +15,27 @@
 .aside-title {
     @apply text-[#637d84];
 }
+
+.aside::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  .aside::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  .aside::-webkit-scrollbar-thumb {
+    background-color: #4B5563; /* Gris suave (puedes cambiarlo) */
+    border-radius: 4px;
+  }
+  
+  .aside::-webkit-scrollbar-thumb:hover {
+    background-color: #6B7280; /* Gris más claro al pasar el mouse */
+  }
+  
+  /* Firefox */
+  .aside {
+    scrollbar-width: thin;
+    scrollbar-color: #4B5563 transparent;
+  }
+  
