--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 .header {
-    @apply w-full bg-[#14181a] shadow-md px-4 py-2 flex justify-between items-center border-b border-[#3E4042];
+    @apply absolute sticky top-0 w-full bg-[#14181a] shadow-md px-4 py-2 flex justify-between items-center border-b border-[#3E4042];
 }
 
 .header-page-title {
